# crosstown-app-base

./: .env.example  .gitattributes  .gitignore  COACHES.md  README.md  TOMORROW.md  azure.yaml
.github/: copilot-instructions.md
.github/workflows/: azure-dev.yml  ci.yml  deploy-judging.yml  deploy.yml  eval.yml  modernize-pr.yml.disabled  redteam.yml
.specify/: feature.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.squad/: .first-run  commit-msg.txt  decisions.md  health-report-2026-05-16T203000Z.txt  team.md
.squad/.history-archives/: banner-history-2026-05-13-to-2026-05-15.md  okoye-history-2026-05-12-to-2026-05-15.md  parker-history-2026-05-13-to-2026-05-15.md
.squad/casting/: history.json  registry.json
.squad/decisions/: decisions.md
.squad/decisions-archive/: decisions-2026-05-12-to-2026-05-15-early.md
.squad/files/: azd-up-outputs-2026-05-15.md  azd-up-preflight-2026-05-15.md  azd-up-result-2026-05-15.md  banner-bug10-diagnosis-2026-05-15.md  banner-bug12-diagnosis-2026-05-15.md  banner-bug5-status.md  commit-msg-gpt41-fix.txt  commit-msg-mic-fix.txt  lab-dry-run-runbook.md  maximoff-bug8-diagnosis-2026-05-15.md  maximoff-bug9-diagnosis-2026-05-15.md  maximoff-mic-button-forensics-2026-05-16.md  okoye-bug4-status.md  pr-body-f1.md  pr-body-gpt41-fix.md  pr-body-k2.md  pr-body-search-rbac.md  pr-bug5-aiohttp-body.md  pr-bug7-wss-body.md  pr-voice-user-transcription-body.md  pr17-body.md  probe_ws.py
.squad/identity/: now.md  resume.md  wisdom.md
apps/frontend/: .dockerignore  (+12 more)
apps/log_analyst/: .dockerignore  Dockerfile  README.md  azure_clients.py  citations.py  main.py  pyproject.toml  settings.py  tool_router.py
apps/log_analyst/tests/: conftest.py  test_citations.py  test_detect_pattern.py  test_search_logs.py  test_summarize_incident.py
apps/log_analyst/tools/: __init__.py  detect_pattern.py  search_logs.py  summarize_incident.py
apps/orchestrator/: .dockerignore  DEPLOY_DIAGNOSIS_2026-05-17.md  Dockerfile  README.md  UAT_READINESS_2026-05-17.md  main.py  pyproject.toml  settings.py  system_prompt.py
apps/orchestrator/agent/: orchestrator.py  tools.py
apps/orchestrator/storage/: cosmos.py
apps/orchestrator/tests/: conftest.py  test_api_turn.py  test_factory.py  test_foundry_realtime.py  test_tools_dispatch.py  test_voice_cancellation.py  test_voice_dedupe_and_user_transcript.py  test_voice_tool_dedupe.py  test_ws_text_path.py
apps/orchestrator/voice/: base.py  factory.py  foundry_realtime.py  speech_services.py
apps/service_advisor/: Dockerfile  citations.py  data_loader.py  main.py  pyproject.toml  settings.py  tool_router.py
apps/service_advisor/data/: route_graph.json
apps/service_advisor/data/disruptions/: DSR-2026-001.json
apps/service_advisor/data/runbooks/: RB-11-line-shutdown-contingency.md  RB-12-shuttle-bus-bridging.md  RB-13-wfh-and-alternate-modes.md
apps/service_advisor/tests/: conftest.py  test_find_alternate_route.py  test_get_disruption_status.py  test_get_shuttle_bridging.py  test_recommend_commute_action.py
apps/service_advisor/tools/: __init__.py  find_alternate_route.py  get_disruption_status.py  get_shuttle_bridging.py  recommend_commute_action.py
data/: README.md  generate_mock_data.py  seed_incidents.json
docs/: 47doors-comparison.md  architecture.md  evals.md  participant-tailoring.md  redteam.md  service-disruption-advisor.md  use-case-map.md  voice.md
evals/: README.md  __init__.py  calibration.json  calibration.md  foundry_evaluators.py  orchestrator_runner.py  requirements.txt  runner.py  test_eval_gate.py  test_orchestrator_gate.py
infra/: abbreviations.json  main.bicep  main.parameters.json
legacy/: README.md
redteam/: README.md  __init__.py  grading.py  requirements.txt  runner.py  test_redteam_gate.py
reference/: MTA_Hackathon_Azure_Judge_Scorecard.html  MTA_Hackathon_Copilot_Studio_Scorecard.html
scripts/: load_search_index.ps1  load_search_index.py  load_search_index.sh  smoke-test.ps1  smoke-test.sh
(+334 files in other folders)
