[project]
name = "mta-orchestrator"
version = "0.1.0"
description = "MTA AI Hackathon orchestrator (FastAPI WebSocket voice relay)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "azure-identity>=1.15",
    "azure-cosmos>=4.6",
    "openai>=1.30",
    "azure-cognitiveservices-speech>=1.37",
    "azure-monitor-opentelemetry>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "settings", "system_prompt"]

[tool.setuptools.packages.find]
include = ["agent*", "voice*", "storage*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = false
warn_unused_ignores = false
files = ["main.py", "settings.py", "system_prompt.py", "agent", "voice", "storage", "tests"]

[[tool.mypy.overrides]]
module = ["azure.cognitiveservices.*", "azure.monitor.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
